# ConsoleRenderer

./: CMakeLists.txt
include/: buffer.h  defines.h  framebuffer.h  global.h  renderer.h  shader.h  types.h
src/: farmebuffer.cpp  global.cpp  main.cpp  renderer.cpp
